--- a/index.html
+++ b/index.html
@@ -45,23 +45,23 @@
             </div>
 
         <div class="imgbox">
-        <img src="./images/scarpa.jpg" class="scarpe">
+        <img src="scarpa.jpg" class="scarpe">
 		</div>
         </div>
         <ul class="thumb">
-            <li><img src="./images/scarpa.jpg" onclick="imgSlider('./images/scarpa.jpg');changeBgColor('#0062be')"></li>
-			<li><img src="./images/cintura.jpg" onclick="imgSlider('./images/cintura.jpg');changeBgColor('#e60c2c')"></li>   
-			<li><img src="./images/tracolla.jpg" onclick="imgSlider('./images/tracolla.jpg');changeBgColor('#1e1e1e')"></li>
-            <li><img src="./images/soletta.jpg" onclick="imgSlider('./images/soletta.jpg');changeBgColor('#0062be')"></li>
+            <li><img src="./images/scarpa.jpg" onclick="imgSlider('scarpa.jpg');changeBgColor('#0062be')"></li>
+			<li><img src="./images/cintura.jpg" onclick="imgSlider('cintura.jpg');changeBgColor('#e60c2c')"></li>   
+			<li><img src="./images/tracolla.jpg" onclick="imgSlider('tracolla.jpg');changeBgColor('#1e1e1e')"></li>
+            <li><img src="./images/soletta.jpg" onclick="imgSlider('soletta.jpg');changeBgColor('#0062be')"></li>
         </ul>
 		<br></br>
 		<br></br>
 		<br></br>
 		<br></br>
         <ul class="sci">
-            <li><a href ="#"><img src="./images/facebook.png"></a></li>
-            <li><a href ="#"><img  src="./images/twitter.png"></a></li>
-            <li><a href ="#"><img  src="./images/instagram.png"></a></li>
+            <li><a href ="#"><img src="facebook.png"></a></li>
+            <li><a href ="#"><img  src="twitter.png"></a></li>
+            <li><a href ="#"><img  src="instagram.png"></a></li>
         </ul>
 		
     </section>
