--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 		</div>
         </div>
         <ul class="thumb">
-            <li><img src="./images/scarpa.jpg" onclick="imgSlider('scarpa.jpg');changeBgColor('#0062be')"></li>
-			<li><img src="./images/cintura.jpg" onclick="imgSlider('cintura.jpg');changeBgColor('#e60c2c')"></li>   
-			<li><img src="./images/tracolla.jpg" onclick="imgSlider('tracolla.jpg');changeBgColor('#1e1e1e')"></li>
-            <li><img src="./images/soletta.jpg" onclick="imgSlider('soletta.jpg');changeBgColor('#0062be')"></li>
+            <li><img src="scarpa.jpg" onclick="imgSlider('scarpa.jpg');changeBgColor('#0062be')"></li>
+	    <li><img src="cintura.jpg" onclick="imgSlider('cintura.jpg');changeBgColor('#e60c2c')"></li>   
+	    <li><img src="tracolla.jpg" onclick="imgSlider('tracolla.jpg');changeBgColor('#1e1e1e')"></li>
+            <li><img src="soletta.jpg" onclick="imgSlider('soletta.jpg');changeBgColor('#0062be')"></li>
         </ul>
 		<br></br>
 		<br></br>
